[package]
name = "egui-modal"
version = "0.3.4"
edition = "2021"
license = "MIT"
description = "a modal library for egui"
repository = "https://github.com/n00kii/egui-modal"
readme = "README.md"
authors = ["n00kii"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { git = "https://github.com/zeozeozeo/egui.git", branch = "tesselate-return-option" }

[dev-dependencies]
eframe  = "0.26.1"
